<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.LoginActivity.NewUserDialogFragment">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/user_info_dialog_fragment_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            />
    </android.support.design.widget.TextInputLayout>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       >
       <android.support.design.widget.TextInputLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           >
           <android.support.design.widget.TextInputEditText
               android:id="@+id/user_info_dialog_fragment_height_ft_edit_text"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/height_feet"
               android:inputType="number"
               android:maxLength="1"
               />
       </android.support.design.widget.TextInputLayout>

       <android.support.design.widget.TextInputLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           >

           <android.support.design.widget.TextInputEditText
               android:id="@+id/user_info_dialog_fragment_height_inches_edit_text"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/height_inches"
               android:inputType="number"
               android:maxLength="2"
               />
       </android.support.design.widget.TextInputLayout>


   </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/user_info_dialog_fragment_skill_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/skill_level"
            android:maxLength="2"
            />
    </android.support.design.widget.TextInputLayout>

</LinearLayout>
