...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/login_activity_new_user_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/new_user"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            />
        <Button
            android:id="@+id/login_activity_existing_user_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/existing_user"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            android:layout_marginBottom="15dp"
...
