<resources>
    <string name="app_name">Clamber</string>
    <string name="home_button_text">Home</string>
    <string name="wall_info_button">Walls</string>
    <string name="projects_button">Projects</string>
    <string name="user_info_button_text">User Info</string>
    <string name="the_circuit_gym_text">The Circuit Bouldering Gym</string>
    <string name="circuit_image">Image of Inside of Circuit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="height">Height</string>
    <string name="skill_level">Skill Level</string>
    <string name="user_info_button">User Info Button</string>
    <string name="ok_button">OK</string>
    <string name="climb_row_grade">Grade:</string>
    <string name="climb_row_style">Style:</string>
    <string name="climb_row_project">Project</string>
    <string name="climb_row_completed">Completed</string>
    <string name="climb_row_route_color">Color:</string>
    <string name="title_activity_wall_sections">WallSectionsActivity</string>
    <string name="climb_row_comments">Comments</string>
    <string name="recommendations">Recommendations</string>
    <string name="height_feet">Height (feet)</string>
    <string name="height_inches">Height (inches)</string>
    <string name="preferences">Preferences</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="new_user_hint_text">New User? Enter a username here!</string>
    <string name="submit_button_text">Submit</string>
    <string name="already_have_username">Already have a username?</string>
    <string name="enter_username_here">Enter your username here!</string>
    <string name="new_user">New User?</string>
    <string name="create_username_here">Create a username here!</string>
    <string name="user_dialog_cancel_string">You can update your user information at any time by selecting the User Info button</string>
    <string name="login_climber_image_content_description">Login Climber Image</string>
    <string name="user_name">User Name</string>
    <string name="enter_username">Please enter a user name</string>
    <string name="login_successful">Login Successful</string>
    <string name="invalid_username">The user name provided is not valid</string>
    <string name="login_unsuccessful">Login Unsuccessful</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="connection_failure">Connection Failure</string>
    <string name="success">Success</string>
    <string name="what_are_other_climbers_saying">What Are Other Climbers Saying?</string>
    <string name="enter_comment_ere">Enter Comment Here</string>
    <string name="user_informaiton">User Information:</string>
    <string name="update_my_info">Update</string>
    <string name="recommendations_text">Recommendations</string>
    <string name="add_comment">Add Comment</string>
    <string name="history">History</string>
    <string name="you_have_not_marked_any_climbs_as_projects_yet_click_on_recommendations_if_you_need_any_suggestions">You have not marked any climbs as projects yet. Click on Recommendations if you need any suggestions.</string>
    <string name="no_comments_yet_text">There are no comments for this climb yet. \n Be the first to add a comment!</string>
    <string name="user_name_s">User Name:</string>
    <string name="skill_level_s">Skill Level:</string>
    <string name="view_n_history">View History</string>
    <string name="no_completed_history_yet">Once you have completed a climb, mark it as completed and it will display here.</string>
    <string name="must_complete_all_fields">Must complete all fields to create user profile</string>
    <string name="height_text">Height:</string>
    <string name="new_walls_this_week">New Walls This Week!</string>
    <string name="welcome_to_the_clamber_app">Welcome to the Clamber App!</string>
    <string name="gym_rating_s">Gym Grade: %s</string>
    <string name="user_rating_s">User Average: %s</string>
    <string name="your_rating_s">What do you think?: %s</string>
    <string name="existing_user">existing user</string>
    <string name="clamber">CLAMBER</string>
    <string name="clamber_title_text">Clamber</string>
    <string name="the_circuit">THE CIRCUIT \n NE</string>
    <string name="cancel">Cancel</string>
    <string name="clamber_vertical">C\nL\nA\nM\nB\nE\nR</string>
    <string name="the_circuit_text">THE CIRCUIT</string>
    <string name="login">Login</string>
    <string name="complete_all_fields">Must complete all fields to create user profile</string>
    <string name="enter_valid_skill_level">Please enter a valid skill level</string>

    <string-array name="main_action_tabs">
        <item>Home</item>
        <item>Walls</item>
        <item>Projects</item>
        <item>User Info</item>
    </string-array>

</resources>
