<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.LoginActivity.ExistingUserLoginFragment">

        <EditText
            android:id="@+id/existing_user_fragment_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

</FrameLayout>
