...
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        />

    <Button
        android:id="@+id/projects_fragment_recommendations_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recommendations"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:layout_alignParentRight="true"
...
