...

    </android.support.v7.widget.CardView>

        <Button
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/user_fragment_history_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_n_history"
            android:textAlignment="center"
            android:padding="10dp"
            android:textColor="@android:color/white"
...
