<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.HomeActivity.Walls.ClimbsFragment"
    >

   <android.support.v7.widget.RecyclerView
       android:id="@+id/climbs_fragment_recycler_view"
       android:layout_width="match_parent"
       android:layout_height="match_parent">

   </android.support.v7.widget.RecyclerView>

</FrameLayout>
