...
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="5dp"
    >

    <ImageView
        android:id="@+id/home_page_image_1_grid_view"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:tag="0"
        />
...
