...
                android:layout_gravity="center"
                android:checked="true"
                />

        </LinearLayout>
            <ImageButton
                android:id="@+id/climb_row_comments_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_info_outline_black_24dp"
                android:background="@android:color/white"
...
